# docker_lp_solvers

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  entrypoint.sh
lp_problem/: lp_example.py  main.py  settings.py
solvers/: Dockerfile
